examples/local/discovery-service-proxy.yaml
# Base config for an ADS management server on 18000, admin port on 9901
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9902
node:
  cluster: grpc-proxy
  id: grpc-proxy
static_resources:
  listeners:
    - name: grpc
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 18001
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: /dev/stdout
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      require_tls: EXTERNAL_ONLY
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: marin3r
                http_filters:
                  - name: envoy.router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": "type.googleapis.com/envoy.api.v2.auth.DownstreamTlsContext"
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: /etc/envoy/tls/marin3r.default.svc.crt
                    private_key:
                      filename: /etc/envoy/tls/marin3r.default.svc.key
                # mTLS is necessary for sds
                validation_context:
                  trusted_ca:
                    filename: /etc/envoy/tls/ca.crt
  clusters:
    - name: marin3r
      connect_timeout: 1s
      type: strict_dns
      http2_protocol_options: {}
      load_assignment:
        cluster_name: marin3r
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 18000
